--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,9 @@
 modGroup=io.sommers
-modVersion=1.2.0
+modVersion=1.3.0
 modBaseName=packmode
-forgeVersion=14.23.4.2703
 minecraftVersion=1.12.2
-mcpVersion=snapshot_20180525
+mcpVersion=20180525
 
-bookShelfVersion=2.3.544
-crafttweakerVersion=4.1.8.6
-gameStageVersion=2.0.91
+bookShelfVersion=2.3.590
+crafttweakerVersion=4.1.20.698
+gameStageVersion=2.0.123
