--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,36 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven {
-            name = "forge"
-            url = "https://files.minecraftforge.net/maven"
-        }
-    }
-    dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
+plugins {
+    id 'java'
+    id 'java-library'
+    id 'com.gtnewhorizons.retrofuturagradle' version '1.3.35'
+}
+
+base {
+    archivesName.set(modBaseName)
+}
+
+version = project.modVersion
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(16))
+        vendor.set(JvmVendorSpec.AZUL)
     }
 }
 
-apply plugin: "net.minecraftforge.gradle.forge"
-
-version = "${minecraftVersion}-" + getVersion()
-group = modGroup
-archivesBaseName = modBaseName
-
 minecraft {
-    version = project.minecraftVersion + "-" + project.forgeVersion
-    runDir = "run"
-    mappings = project.mcpVersion
+    mcVersion.set("1.12.2")
 
+    mcpMappingChannel.set("snapshot") // Mapping Channel
+    mcpMappingVersion.set(mcpVersion) // Mapping Version
 
-    replace "@VERSION@", "${modVersion}"
-    replaceIn "PackMode.java"
+    username.set("Developer") // Test runtime player name
 }
 
 repositories {
     mavenCentral()
     maven {
         name 'CraftTweaker'
-        url 'http://maven.blamejared.com'
+        url 'https://maven.blamejared.com'
     }
     maven {
         name "GameStages"
@@ -40,21 +39,24 @@ repositories {
 }
 
 dependencies {
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${crafttweakerVersion}"
-    deobfCompile("net.darkhax.gamestages:GameStages-1.12.2:${gameStageVersion}") {
+    implementation 'org.jetbrains:annotations:24.0.0'
+
+    implementation "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${crafttweakerVersion}"
+    implementation("net.darkhax.gamestages:GameStages-1.12.2:${gameStageVersion}") {
         exclude module: "crafttweaker"
     }
-    deobfCompile "net.darkhax.bookshelf:Bookshelf-1.12.2:${bookShelfVersion}"
+    implementation "net.darkhax.bookshelf:Bookshelf-1.12.2:${bookShelfVersion}"
 }
 
 processResources {
+    setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
     inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+    inputs.property "mcversion", minecraftVersion
 
     from(sourceSets.main.resources.srcDirs) {
         include "mcmod.info"
 
-        expand "version": project.version, "mcversion": project.minecraft.version
+        expand "version": project.version, "mcversion": minecraftVersion
     }
 
     from(sourceSets.main.resources.srcDirs) {
@@ -62,37 +64,15 @@ processResources {
     }
 }
 
-apply plugin: "maven"
-
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "file://" + (System.getenv("local_maven") != null ? System.getenv("local_maven") : System.getenv("bamboo_local_maven")))
-        }
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    if (it.name in ['compileMcLauncherJava', 'compilePatchedMcJava']) {
+        return
     }
-}
-
-String getVersion() {
-    String version = "${modVersion}"
-    String branch = project.hasProperty("branch") ? project.branch : ""
-
-    if(branch != "") {
-        version += "-" + branch
-
-        String buildNumber = getBuildNumber()
-        if(buildNumber != "") {
-            version += "." + buildNumber
-        }
-    }
-
-    return version
-}
-
-static String getBuildNumber() {
-    String buildNumber = System.getenv("BUILD_NUMBER") != null ? System.getenv("BUILD_NUMBER") : ""
-    if(buildNumber == "") {
-        buildNumber = System.getenv("bamboo_buildNumber") != null ? "." + System.getenv("bamboo_buildNumber") : ""
-    }
-    return buildNumber
+    sourceCompatibility = 17
+    options.release.set(8)
+    javaCompiler.set(javaToolchains.compilerFor {
+        languageVersion.set(JavaLanguageVersion.of(16))
+        vendor.set(JvmVendorSpec.AZUL)
+    })
 }
