--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,19 @@ dependencies {
     implementation "net.darkhax.bookshelf:Bookshelf-1.12.2:${bookShelfVersion}"
 }
 
+jar {
+    manifest {
+        def attribute_map = [:]
+        attribute_map['FMLCorePlugin'] = "io.sommers.packmode.core.PackModeCore"
+        attribute_map['FMLCorePluginContainsFMLMod'] = true
+        def currentTasks = gradle.startParameter.taskNames
+        if (currentTasks[0] == 'build' || currentTasks[0] == 'prepareObfModsFolder' || currentTasks[0] == 'runObfClient') {
+            attribute_map['ForceLoadAsMod'] = true
+        }
+        attributes(attribute_map)
+    }
+}
+
 processResources {
     setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
     inputs.property "version", project.version
